# hassio-config

./: .gitignore  CLAUDE.md  ENERGY.md  README.md  STATE_MACHINE.md  automations.yaml  binary_sensors.yaml  configuration.yaml  cover.yaml  customize.yaml  deployment-config.json  flows_analysis.json  ha-request-interception-patterns.md  home-assistant.log.1  input_boolean.yaml  input_datetime.yaml  input_number.yaml  input_select.yaml  input_text.yaml  node-red-function-mappings.json  node-red-function-mappings.md  presence-flow-structure.json  rest_commands.yaml  scenes.yaml  scripts.yaml  template_entities.yaml  template_sensors.yaml  tmp_analyze_flows.js  zone.yaml
automation/: tmp.yaml
docs/: API.md  BUILD-DEPLOY.md  CACHE-STATES.md  NODE-RED-FLOWS.md  PLANTS.md  PRESENCE.md  SCHEDULING.md  presence-view.json
fan/: template.yaml
group/: all_locks.yaml  climate.yaml  kitchen.yaml  living_room.yaml  office.yaml
js/: .eslintrc.json  .prettierrc.json  package.json  tsconfig.json
light/: group.yaml  swtich.yaml  template.yaml
lock/: group.yaml
node-red/: .config.json  .config.json.backup  .config.nodes.json  .config.nodes.json.backup  flows.json  (+8 more)
node-red-backups/: flows_2025-07-25_21-29-01_78bd831f.json  flows_2025-07-25_21-29-01_78bd831f.meta.json
node-red-scripts/: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  HANDOFF.md  NODE-RED-ADMIN-API-RESEARCH.md  build.ts  flow-summary.md  package-lock.json  package.json  run-mapper-ai.mjs  run-mapper.mjs  tsconfig.json
python-scripts/: entities-to-scene.py  pyproject.toml  run.sh
(+158 files in other folders)
