[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
loguru = "^0.7.2"
pyyaml = "^6.0.2"
colour-science = "^0.4.6"
matplotlib = "^3.10.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
types-requests = "^2.32.0.20241016"
types-pyyaml = "^6.0.12.20241221"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
